--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,3 +13,13 @@ h3 {
 .rating i {
   margin-right: 0px;
 }
+
+h1 {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
+}
